# promptbench

./: .gitignore  README.md  pyproject.toml
promptbench/: __main__.py  config.py  dataset.py  logger.py  model.py  prompt.py  strategies.py
promptbench/models/: google.py  llama.py  openai.py
promptbench/prompts/: chain_of_thought.txt
